--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 # site settings
-title: Forty
+title: Forty555
 subtitle: by HTML5 UP
 email: youremailaddress@gmail.com
 description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
 baseurl:  # the subpath of your site, e.g. /blog
 url: "https://jdsneakers.github.io/"
-author:
-street_address: 1234 Somewhere Road
-city: Nashville
-state: TN
-zip_code: 55555
+author: John Austin
+street_address: 18215 Foothill Blvd
+city: Fontana
+state: CA
+zip_code: 92335
 country: United States of America
-phone: (716) 555-5555
+phone: (909) 320-1316
 
 # homepage tiles
 tiles-source: pages # accepts "posts" or "pages"
@@ -24,10 +24,10 @@ tiles-count: 6
 socials:
   GitHub: https://github.com/JDSneakers
   GitLab:
-  Google-Plus: https://plus.google.com/u/0/+AndrewBanchich
+  Google-Plus: 
   Instagram:
-  LinkedIn: https://www.linkedin.com/in/andrew-banchich-a4ba1195
-  Twitter: https://twitter.com/andrewbanchich
+  LinkedIn: https://www.linkedin.com/in/john-austin-579a88261/
+  Twitter: https://twitter.com/LoveStruckKicks
   Facebook:
   Slack:
 
