Updated title, subtitle, description, and email on config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # site settings
-title: Forty555
-subtitle: by HTML5 UP
-email: youremailaddress@gmail.com
-description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
+title: John Austin
+subtitle: CS Grad | Innovator
+email: johnaustin@snhu.edu
+description: Passionate about Technology and Coding.<br /> Building the Future One Line at a Time.
 baseurl:  # the subpath of your site, e.g. /blog
 url: "https://jdsneakers.github.io/"
 author: John Austin
